--- a/css/styles.css
+++ b/css/styles.css
@@ -5,3 +5,9 @@
 @import "component/sidebar.css";
 @import "component/subject-select.css";
 @import "component/class-order.css";
+@import "component/screen-header.css";
+
+body {
+  height: 1600px;
+  font-weight: 500;
+}
